# scholarly

./: .dockerignore  .env.example  .gitignore  CHANGELOG-hardening.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  jest.config.js  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy-site.yml  deploy.yml
apps/mobile/: .gitignore  app.config.ts  eas.json  metro.config.js  package.json
apps/web/: .env.local.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
docs/: AZURE_DEPLOYMENT_GUIDE.md  SCHOLARLY_FEATURES_AND_CAPABILITIES.md  SCHOLARLY_FEATURES_AND_CAPABILITIES_v1.0.md  output_1.txt
docs/architecture/: original-readme.md
docs/elevenlabs-removal/: ELEVENLABS_REMOVAL_TASK.md
docs/erudits-migration/: erudits-content-protection-handoff-v2.6.0.docx
docs/migrations/: MIGRATION_GUIDE.md
docs/new-deployments/: Scholarly-Deployment-Guide.docx  Scholarly-Voice-Service-Architecture.docx  scholarly-comprehensive-audit-2026-03-05-2.docx  scholarly-session-2026-03-03-e2e-test-suite.tar  scholarly-voice-intelligence-fix.tar
infra/: README.md  RUNBOOK.md
migrations/: migration-review.service.ts  migration-transform.service.test.ts  migration-transform.service.ts  migration-transform.types.ts
scholarly-project-files/: ARCHITECTURE.md  CHANGELOG.md  Scholarly-The-Unified-Learning-Nexus.md  Showcase-Digital-Portfolio-Module.md  capacity-planning_service.ts  content-marketplace_service.ts  curriculum-curator_service.ts  index.ts  relief-marketplace_service.ts  scheduler-config.ts  tutor-booking_service.ts
scripts/: start.sh
services/voice-service/: .env.example  DEPLOYMENT-AUDIT.md  Dockerfile  docker-compose.yml  provider-registry-cleanup.py  pyproject.toml
services/voice-service/app/: config.py  dependencies.py  main.py
services/voice-service/app/routes/: alignment.py  cloning.py  health.py  stt.py  studio.py  translation.py  tts.py
services/voice-service/cloning/: clone_engine.py  consent.py  profile_manager.py
services/voice-service/models/: alignment_schemas.py  schemas.py
services/voice-service/prisma/: schema-patch.ts
services/voice-service/processing/: analysis.py  normaliser.py  phonics_narrator.py  pitch.py  tempo.py
services/voice-service/providers/: base.py  chatterbox_provider.py  kokoro_provider.py  registry.py  whisper_provider.py  whisperx_provider.py
services/voice-service/storage/: azure_blob.py  local_fs.py
services/voice-service/tests/: conftest.py  test_cloning.py  test_processing.py  test_providers.py  test_whisper.py  test_whisperx.py
site/: README.md  ai-buddy.html  ask-issy.html  assessment-engine.html  content-marketplace.html  curriculum-intelligence.html  developer-platform.html  eduscrum.html  golden-learning-path.html  homeschool-hub.html  index.html  learning-portfolio.html  lingua-flow.html  lis-bridge.html  micro-schools.html  pricing.html  relief-marketplace.html  scheduling-engine.html  token-economy.html  tutor-booking.html
storefront/: resource-storefront.service.test.ts  resource-storefront.service.ts  resource-storefront.types.ts
(+424 files in other folders)
